# product-inventory-system

./: .gitignore  Readme.md
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: ProductForm.jsx  ProductList.jsx  StockManagement.jsx  StockReport.jsx
Frontend/src/context/: AuthContext.jsx
Frontend/src/pages/: HomePage.jsx  Layout.jsx  LoginPage.jsx  RegistrationPage.jsx
Frontend/src/utils/: apiRoutes.js  authAxios.js
Server/: .env  db.sqlite3  manage.py  pyproject.toml
Server/src/: settings.py  urls.py
Server/src/Product/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Server/src/Product/migrations/: 0001_initial.py  0002_initial.py  0003_remove_stocktransaction_products_st_sub_var_3eb6d1_idx_and_more.py
Server/src/Usermgmt/: apps.py  models.py  serializers.py  urls.py  views.py
Server/src/Usermgmt/migrations/: 0001_initial.py
Server/src/constant/: Logging.py  Pagination.py
Server/src/utils/: image_utils.py  product.py
